improved progress meter
